# ESP32S3-CAM-LCD-TFCARD

esp-idf-st7789-master/: CMakeLists.txt  sdkconfig
esp-idf-st7789-master/main/: CMakeLists.txt  bsp.c  bsp.h  cam_hal.c  esp_camera.c  global.h  ll_cam.c  ll_cam.h  main.c  ov2640.c  sccb.c  st7789.c  st7789.h
